# azure-keyvault-unlock-luks

./: .gitignore  Cargo.toml  PKGBUILD  README.md  create_release.sh
.cargo/: config.toml
.github/workflows/: main.yml  rust.yml
etc/initcpio/hooks/: luks_unlocker
etc/initcpio/install/: luks_unlocker
src/: main.rs
src/etc/initcpio/install/: luks_unlocker.sh
src/etc/mkinitcpio-systemd-tool/config/: initrd-network.network
src/usr/lib/systemd/system/: luks_unlocker.service
